<resources>
    <string name="app_name">TestAndroid</string>
    <string name="textView1">Строка 1</string>
    <string name="textView2">String 2</string>
    <string name="button">Exchange</string>

    <string name="button_hw1">HW 1</string>
    <string name="button_hw2">HW 2</string>
    <string name="button_hw3">HW 3</string>
    <string name="button_hw4">HW 4</string>
    <string name="button_hw5">HW 5</string>
    <string name="button_hw6">HW 6</string>
    <string name="button_hw7">HW 7</string>
    <string name="button_hw8">HW 8</string>
    <string name="button_hw9">HW 9</string>


    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="buttonLoadImage">Load Image</string>
    <string name="ImageURL">Image URL</string>
    <string name="picture_url_hw3">https://static-s.aa-cdn.net/img/ios/1057332907/91211f3ab2c85ea62ea7899c982ffb13?v=1</string>
    <string name="wifi_on">Wi-Fi ON</string>
    <string name="wifi_off">Wi-Fi OFF</string>

</resources>
