<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_hw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw1" />

    <Button
        android:id="@+id/button_hw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw2" />

    <Button
        android:id="@+id/button_hw3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw3" />

    <Button
        android:id="@+id/button_hw4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw4" />

    <Button
        android:id="@+id/button_hw5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw5" />

    <Button
        android:id="@+id/button_hw6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw6" />

    <Button
        android:id="@+id/button_hw7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw7" />

    <Button
        android:id="@+id/button_hw8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw8" />

    <Button
        android:id="@+id/button_hw9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_hw9" />


</LinearLayout>