<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1190e9"
    android:orientation="horizontal"
    android:weightSum="100">

<!-- ScrolView Liner (Frame) View-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center|top"
            android:layout_weight="0.3"
            android:id="@+id/textView" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/main_activity_magin"
            android:layout_weight="3"
            android:id="@+id/imageView"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:contentDescription="@string/picture_url_hw3"/>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/main_activity_magin"
            android:hint="@string/ImageURL"
            android:id="@+id/editText"
            android:textSize="12sp"
            android:background="@color/colorWhite"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/buttonLoadImage"
            style="@style/ButtonStyle"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:padding="@dimen/button_padding"
            android:text="@string/buttonLoadImage" />


    </LinearLayout>
    <!--android:src="@drawable/bee"-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/main_activity_magin"-->
        <!--android:src="@drawable/bee"-->
        <!--app:srcCompat="@drawable/ic_smoke_free_black_24dp"-->
        <!--/>-->
    <!--android:src="@drawable/bee"-->

 </LinearLayout>