<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1190e9"
    android:orientation="horizontal"
    android:weightSum="100">

<!-- ScrolView Liner (Frame) View-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:weightSum="3">

        <EditText
            android:layout_width="250dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/main_activity_magin"
            android:hint="@string/app_name"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="250dp"
            android:paddingLeft="@dimen/main_activity_magin"
            android:hint="@string/textView1"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button1"
            style="@style/ButtonStyle"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/button1" />


    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/button1"-->
        <!--style="@style/ButtonStyle"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAllCaps="false"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:textSize="20sp"-->
        <!--android:text="@string/button1" />-->

    <!--<Button-->
        <!--android:id="@+id/button2"-->
        <!--style="@style/ButtonStyle2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/main_activity_magin"-->
        <!--android:textAllCaps="false"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:text="@string/button1" />-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="@dimen/main_activity_magin"-->
        <!--android:src="@drawable/bee"-->
        <!--app:srcCompat="@drawable/ic_smoke_free_black_24dp"-->
        <!--/>-->
    <!--android:src="@drawable/bee"-->

 </LinearLayout>